# black-hole-optimization

./: CMakeLists.txt  README.md  black_hole.cpp
shaders/: geodesic.comp
src/: black_hole.cpp
